# prorab-sistem

./: .env.example  .gitignore  Makefile  README.md  google-credentials.json  Учет расходов Велл дом.txt
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_kassa.py  003_add_is_advance.py  004_add_app_settings.py  005_add_photo_camera_only.py  006_add_role_permissions.py  007_add_roles_table.py  008_add_primary_color.py  009_add_tasks.py  010_tasks_attachments_type.py  011_task_comments_and_due_at.py  012_add_bitrix_integration.py  013_project_bitrix_group.py  014_masters_entity.py  015_master_project_visibility.py  016_master_rates.py  017_task_master_link.py
backend/app/: main.py
backend/app/api/v1/: ai.py  auth.py  earnings.py  masters.py  photos.py  records.py  router.py  settings.py  tasks.py
backend/app/api/v1/admin/: analytics.py  bitrix.py  permissions.py  projects.py  roles.py  users.py
backend/app/core/: config.py  database.py  deps.py  permissions.py  redis.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: bitrix.py  earnings.py  gsheets.py  s3.py
backend/scripts/: create_admin.py  reset_pin.py
docs/: architecture.md
frontend/: api.js  index.html  manifest.json  sw.js
infra/: Caddyfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf  welldom.service
mobile/: .gitignore  README.md  capacitor.config.json  make-icons.ps1  package-lock.json  package.json  sync-web.js
(+9 files in other folders)
